<resources>
    <string name="app_name" translatable="false">SpinWheel</string>
    <string name="app_name_2">Spin Wheel</string>

    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">French</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="german" translatable="false">German</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="china" translatable="false">China</string>

    <string name="Send_Email">Send Email</string>
    <string name="There_is_no">There is no</string>
    <string name="feedback_failed">Feedback failed</string>
    <string name="app_review_failed">App review failed</string>
    <string name="thank_you">Thank you</string>
    <string name="rate_us">Rate us</string>
    <string name="not_now">Not now</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="your_opinion_matter_to_us">Your opinion matter to us</string>
    <string name="if_you_enjoy_this_know_your_device_would_you_mind_rating_us_on_the_google_play_then">If you enjoy this SpinWheel, would \nyou mind rating us on the Google Play, then?</string>

    <string name="language">Language</string>
    <string name="choose_language">Choose language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="continue_">Continue</string>
    <string name="are_you_sure_want_to_quit_app">Are you sure want to quit app?</string>
    <string name="please_choose_a_language">Please choose a language</string>
    <string name="no_internet_connection">No Internet Connection!</string>

    <string name="title_intro_01">Win By Spinning</string>
    <string name="title_intro_02">Find The Special One</string>
    <string name="title_intro_03">Teammates Finder</string>
    <string name="content_intro_01">Winners, let’s spin this colorful wheel</string>
    <string name="content_intro_02">Let’s see who will be picked</string>
    <string name="content_intro_03">Connect with your new teammates</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="version">Version: </string>

    <string name="welcome_back">Welcome Back</string>
    <string name="wb_title">We’re glad to have you here again. Let’s pickup where you left off and continue your journey!!</string>
    <string name="permission">Permissions</string>
    <string name="allow_access">Allow Access</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="permission_title">The app requires these permissions to work:</string>
    <string name="please_select_a_language">Please select a language to continue</string>
    <string name="notification">Notification</string>
    <string name="memory_access">Memory access</string>
    <string name="spin_the_wheel">Spin The Wheel</string>
    <string name="spin_roulette">Spin Roulette</string>
    <string name="lets_spin">Let\'s Spin</string>
    <string name="spin">Spin</string>
    <string name="more_options">More Options</string>
    <string name="edit">Edit</string>
    <string name="homograft">Homograft</string>
    <string name="choose_number">Choose Number</string>
    <string name="wheel_question">Who will do some belly dance for 5 minutes straight?</string>
    <string name="touch_screen_unlock">Touch the screen to unlock a challenge.</string>
    <string name="number_two">2</string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>
    <string name="roulette_options_coming">Roulette options are ready for the next pass.</string>
    <string name="homograft_prompt">Pull together and let the winner be chosen.</string>
    <string name="chosen_challenge">Make a lovey-dovey face for 5 seconds</string>
    <string name="roulette_list">Roulette List</string>
    <string name="no_wheel">Oops, There\'s no wheel to spin :&lt;</string>
    <string name="add_new_roulette">Add New Roullette</string>
    <string name="add_new_roulette_hint">Add a new wheel and start the fun</string>
    <string name="delete">Delete</string>
    <string name="duplicate">Duplicate</string>
    <string name="new_wheel">New Wheel</string>
    <string name="edit_wheel">Edit</string>
    <string name="wheel_name">Wheel\'s Name</string>
    <string name="insert_wheel_name">Insert name of the wheel</string>
    <string name="wheel_color">Wheel Color</string>
    <string name="classic">Classic</string>
    <string name="font_size">Font size</string>
    <string name="repeat_option">Repeat option</string>
    <string name="slices">Slices</string>
    <string name="add_option">+ Add Option</string>
    <string name="preview">Preview</string>
    <string name="save">Save</string>
    <string name="enter_name_of_wheel">Enter name of Wheel</string>
    <string name="max_24_options">Only up to 24 options</string>
    <string name="add_at_least_two_slices">Add at least 2 slices to make the wheel.</string>
    <string name="discard_changes">Discard Changes?</string>
    <string name="discard">Discard</string>
    <string name="choose_wheel_color">Choose wheel color</string>
    <string name="color">Color</string>
    <string name="custom_color">Custom Color</string>
    <string name="choose_color_desire">It\'s time to choose a color that matches\nyour desire</string>
    <string name="ok">OK</string>
    <string name="winner">The winner is...</string>
    <string name="hide">Hide</string>
    <string name="close">Close</string>
    <string name="remove">Remove</string>
    <string name="please_wait_result">Please wait for the result</string>
    <string name="keep_at_least_two_slices">Please keep at last two slice to the wheel</string>
    <string name="duplicate_limit">Only duplicate up to 5 wheels</string>
    <string name="duplicated">Wheel duplicated</string>
    <string name="delete_wheel_title">Delete</string>
    <string name="delete_wheel_message">Are you sure you want to delete this?</string>
    <string name="insert_player_name">Insert player\'s name</string>
    <string name="restart">Restart</string>
    <string name="hold_3_seconds">Giữ ngón tay trong 3s</string>
    <string name="need_more_players">Cần thêm người chơi</string>
    <string name="need_more_fingers_count">Cần giữ thêm %1$d ngón tay</string>
    <string name="need_hold_enough">Cần giữ ngón tay đủ 3s</string>
    <string name="need_hold_until_animation_done">Cần giữ ngón tay đến khi hoạt ảnh kết thúc</string>
    <string name="winner_label">Winner</string>
    <string name="choose_number_tutorial">Choose the number of winners, then keep fingers on the screen for 3 seconds.</string>
    <string name="homograft_tutorial">Choose the number of teams, then keep fingers on the screen for 3 seconds.</string>
    <string name="number_of_chosen_people">Number of chosen people</string>
    <string name="number_of_teams">Number of teams</string>
    <string name="dare">Dare</string>
    <string name="over_win_limit">Oops! You\'ve gone over the win limit</string>
    <string name="try_again">Try Again</string>
    <string name="result">Result</string>
    <string name="exit">Exit</string>
    <string name="warning">Warning</string>
    <string name="if_you_leave_now">If you leave now, all unsaved edits will be lost. Are you sure you want to exit?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
