<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:paddingVertical="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:background="@drawable/bg_radius_8"
            android:backgroundTint="@color/color_red_crimson_50"
            android:contentDescription="@string/edit"
            android:padding="10dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_add"
            app:tint="@color/white" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:background="@drawable/bg_outline_8"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/insert_player_name"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:paddingHorizontal="14dp"
            android:singleLine="true"
            android:textColor="@color/color_main_text"
            android:textColorHint="@color/dark_overlay_40"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete"
            android:padding="12dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_delete_red" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
